# stank-bot

./: .env.dev  .env.dev-mock  .env.example  .gitignore  .hermes.md  AGENTS.md  RAILWAY.md  README.md  StankBot.plugin.js  alembic.ini  nixpacks.toml  pyproject.toml  railway.json
.github/workflows/: ci.yml  deploy.yml  release.yml
.opencode/commands/: commit-and-push.md  triage.md  validate.md
.opencode/skills/stank-db-migrations/: SKILL.md
.opencode/skills/stank-e2e-workflow/: SKILL.md
.opencode/skills/stank-embed-templates/: SKILL.md
.opencode/skills/stank-frontend-patterns/: SKILL.md
.opencode/skills/stank-scoring-math/: SKILL.md
.opencode/skills/stank-ws-protocol/: SKILL.md
deploy/cron/: watchdog.sh
deploy/docker/: Dockerfile  docker-compose.yml  entrypoint.sh
deploy/systemd/: stankbot.service
deploy/windows/: run.ps1
docs/: v2-parity.md
docs/runbooks/: reset-player-pp.md
migrations/: env.py  script.py.mako
migrations/versions/: 20260419_0000_0001_initial_schema.py  20260419_0001_0002_seed_achievements.py  20260420_0002_0003_altar_name_match.py  20260420_0003_0004_altar_emoji_animated.py  20260420_0004_0005_single_altar_per_guild.py  20260420_0005_0006_admin_users.py  20260421_0006_0007_team_player_achievement.py  20260421_1513_a99d29835488_make_admin_users_global.py  20260423_add_player_discord_avatar.py  20260426_add_session_chain_counters.py  20260525_0000_add_media_owner_cover_url_and_alignment_mask.py  20260526_0000_add_chain_unique_constraint.py  20260607_0000_add_fourth_place_achievement.py  20260609_0000_fix_dashboard_reaction_emoji_name.py  20260609_0100_add_altar_reaction_emojis.py  20260614_0000_add_tissue_counts.py  20260620_0000_add_voice_grit_columns.py  20260623_0000_add_wiki.py  20260628_0114_56cd584ed945_add_sticker_ids_json_to_altars.py  20260714_0000_seed_voice_stank_achievements.py
scripts/: agent-browser.mjs  dev.ps1  dev.sh  run-e2e.mjs  static-server.mjs  visual-audit.mjs
src/stankbot/: __init__.py  __main__.py  bot.py  config.py  logging.py  logging_setup.py  rebuild.py
src/stankbot/cogs/: _checks.py  _identity.py  admin.py  chain_listener.py  fun_commands.py  preview.py  stank_commands.py  wiki.py
src/stankbot/db/: engine.py  models.py
src/stankbot/discord_mock/: __init__.py  bot.py  models.py
src/stankbot/scheduling/: media_metrics_scheduler.py  session_scheduler.py
src/stankbot/services/: achievements.py  announcement_service.py  board_renderer.py  board_service.py  chain_service.py  chart_renderer.py  dashboard_urls.py  default_templates.py  embed_builders.py  history_service.py  media_service.py  (+11 more)
tests/: conftest.py
tests/unit/: test_achievements.py  test_board_pagination.py  test_chain_api.py  test_chain_listener.py  test_chain_service.py  test_chart_renderer.py  test_dashboard_urls.py  test_embed_builders.py  test_emoji.py  test_fourth_place_achievement.py  test_fourth_place_session_id.py  test_grit_detector.py  test_media_api.py  test_media_providers_http_client.py  test_media_service.py  test_owner_milestones.py  test_player_api.py  test_player_chains_api.py  test_profiles_api.py  test_scoring_service.py  test_session_api.py  test_session_list_api.py  test_session_service.py  test_stank_match.py  test_template_engine.py  test_time_utils.py  test_tissue_counts.py  test_v2_app.py  test_ws.py
web/: package.json  playwright.config.ts  vite.config.ts  vitest.config.ts
web/e2e/: admin.spec.ts  auth.spec.ts  board.spec.ts  fixtures.ts  user-menu.spec.ts
web/src/: app.css
(+246 files in other folders)
