[project]
name = "stankbot"
version = "2.70.7"
description = "Server-side Discord Application for the Stank chain game"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Randowned" }]

dependencies = [
    "discord.py>=2.4",
    "SQLAlchemy[asyncio]>=2.0.30",
    "aiosqlite>=0.20",
    "alembic>=1.13",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "APScheduler>=3.10",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "itsdangerous>=2.2",
    "python-multipart>=0.0.9",
    "msgpack>=1.0",
    "Pillow>=10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
    "mypy>=1.11",
]
postgres = [
    "asyncpg>=0.29",
]

[project.scripts]
stankbot = "stankbot.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/stankbot"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "ASYNC", "SIM"]
ignore = ["E501"]  # line length handled by formatter

[tool.ruff.lint.per-file-ignores]
"src/stankbot/web/**/*.py" = ["B008"]  # FastAPI's Depends() in defaults is idiomatic

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "src"
explicit_package_bases = true

# Cog modules use discord.py decorators whose stubs are typed as classes
# (app_commands.check?, valid-type, untyped-decorator, etc.) — these
# produce ~80 false positives per file.  Silencing them per-module so the
# rest of the codebase can stay strictly typed.
# discord_mock is dev-only test infrastructure, not production code.
[[tool.mypy.overrides]]
module = [
    "stankbot.cogs.*",
    "stankbot.discord_mock.*",
]
ignore_errors = true

# Scheduling — apscheduler has no type stubs; suppressing per-file.
[[tool.mypy.overrides]]
module = [
    "stankbot.scheduling.session_scheduler",
    "stankbot.scheduling.media_metrics_scheduler",
]
ignore_errors = true

# Starlette middleware overrides — BaseHTTPMiddleware.dispatch signature
# diverges from mypy's expectations in ways that can't be annotated cleanly.
[[tool.mypy.overrides]]
module = [
    "stankbot.web.app",
]
ignore_errors = true

# Mock/test endpoints and dev-only infrastructure — not production code.
[[tool.mypy.overrides]]
module = [
    "stankbot.web.routes.mock_events",
    "stankbot.services.mock_event_bridge",
]
ignore_errors = true

# Web routes with extensive bare dict annotations — suppress type-arg
# so new code issues are still caught but existing bare dicts don't flood output.
[[tool.mypy.overrides]]
module = [
    "stankbot.web.routes.admin",
]
disable_error_code = ["type-arg"]

[[tool.mypy.overrides]]
module = [
    "stankbot.web.ws",
]
disable_error_code = ["type-arg", "import-untyped"]

# Voice detection — numpy and faster-whisper have no type stubs.
[[tool.mypy.overrides]]
module = [
    "stankbot.utils.grit_detector",
]
disable_error_code = ["import-not-found"]

[[tool.mypy.overrides]]
module = [
    "stankbot.services.voice_service",
]
ignore_errors = true

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.6",
    "mypy>=1.11",
    "numpy>=2",
]
voice = [
    "faster-whisper>=1.1",
]
